# talk-datatype-generic-programming

./: Readme.md  datatype-generic-programming.cabal
app/: Main.hs
src/: JsEncode.hs
test/: Spec.hs
