name:                datatype-generic-programming
version:             0.1.0.0
synopsis:            A tutorial on datatype generic programming
description:         Please see README.md
homepage:            https://github.com/githubuser/functors-generic-programming#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben de Gooijer
copyright:           2017 Author name here
category:            Datatype generic programming
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JsEncode
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable datatype-generic-programming-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-deriv
  build-depends:       base
                     , datatype-generic-programming
                     , generic-deriving
  default-language:    Haskell2010

test-suite datatype-generic-programming-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , HUnit
                     , datatype-generic-programming
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

